# backlit

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  backlit-design.md
.github/workflows/: ci.yml  linux-e2e.yml
apps/: README.md
apps/launcher/: README.md
apps/settings/: README.md
apps/terminal-wrapper/: README.md
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  metrics.rs
crates/compositor/: Cargo.toml
crates/compositor-backend/: Cargo.toml
crates/compositor-backend/src/: lib.rs  main.rs
crates/compositor/src/: main.rs
crates/demo-client/: Cargo.toml
crates/demo-client/src/: lib.rs  main.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs  main.rs
crates/launcher/: Cargo.toml
crates/launcher/fixtures/: org.backlit.Browser.desktop  org.backlit.Settings.desktop  org.backlit.SpawnProbe.desktop  org.backlit.Terminal.desktop
crates/launcher/src/: lib.rs  main.rs
crates/notification-daemon/: Cargo.toml
crates/notification-daemon/src/: lib.rs  main.rs
crates/perf/: Cargo.toml
crates/perf/src/: lib.rs  main.rs
crates/portal-backend/: Cargo.toml
crates/portal-backend/src/: lib.rs  main.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs  main.rs
crates/session/: Cargo.toml
crates/session-supervisor/: Cargo.toml
crates/session-supervisor/src/: lib.rs  main.rs
crates/session/src/: main.rs
crates/settings/: Cargo.toml
crates/settings-daemon/: Cargo.toml
crates/settings-daemon/src/: lib.rs  main.rs
crates/settings/src/: lib.rs  main.rs
crates/shell/: Cargo.toml
crates/shell-protocol/: Cargo.toml
crates/shell-protocol/src/: lib.rs
crates/shell/src/: lib.rs  main.rs
crates/shortcuts/: Cargo.toml
crates/shortcuts/src/: lib.rs  main.rs
crates/surface/: Cargo.toml
crates/surface/src/: lib.rs  main.rs
crates/window-policy/: Cargo.toml
crates/window-policy/src/: lib.rs
dev/: multipass-cloud-init.yaml
docs/architecture/: milestones.md  mvp-0.md  mvp-1.md  real-shm-client-pixels.md
docs/performance/: budgets.md
docs/protocols/: mvp.md
docs/runbooks/: parallels-ubuntu-readonly.md
packaging/: README.md
packaging/applications/: org.backlit.Settings.desktop
packaging/debian/: README.md  control.stub  fastgui-compositor.install  fastgui-dev-tools.install  fastgui-portal.install  fastgui-session.install  fastgui-settings.install  fastgui-shell.install
packaging/sessions/: backlit.desktop
packaging/systemd/: backlit-compositor.service  backlit-notification-daemon.service  backlit-session.target  backlit-settings-daemon.service  backlit-shell.service
scripts/: bootstrap-ubuntu.sh  render-gui-preview.sh  render-parallels-gui-preview.sh  verify-ci-contract.sh  verify-compositor-runtime.sh  verify-compositor-socket.sh  verify-crash-logs.sh  verify-debian-package-build.sh  verify-debian-package-install.sh  verify-debian-system-install.sh  verify-dedicated-drm-session.sh  verify-drm-master-boundary.sh  verify-drm-session-smoke.sh  verify-gui-smoke.sh  verify-launch-performance.sh  verify-launch-readiness.sh  verify-launcher-desktop-discovery.sh  verify-linux-e2e.sh  verify-mvp-complete.sh  verify-mvp0-contract.sh  verify-mvp1-contract.sh  verify-nested-wayland-smoke.sh  verify-notification-daemon.sh  verify-package-manifests.sh  verify-packaging-contract.sh  verify-parallels-dedicated-drm-e2e.sh  verify-parallels-linux-e2e.sh  verify-parallels-mvp-e2e.sh  verify-parallels-post-repair-readiness.sh  verify-parallels-ubuntu-health.sh  verify-portal-security.sh  verify-resource-budget.sh  verify-service-lifecycle.sh  verify-session-clean-exit.sh  verify-session-launch.sh  verify-session-replay.sh  verify-settings-app.sh  verify-settings-daemon.sh  verify-smithay-compositor-runtime.sh  verify-smithay-live-surface-snapshots.sh  (+5 more)
tools/: README.md
tools/hardware-lab/: README.md
tools/perf/: README.md
tools/screenshot-tests/: README.md
