[package]
name = "backlit-compositor-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
smithay-backend = ["dep:smithay", "dep:wayland-client", "wayland-protocols/client"]

[dependencies]
backlit-common = { path = "../common" }
smithay = { version = "0.7.0", optional = true, default-features = false, features = [
  "backend_drm",
  "backend_gbm",
  "backend_libinput",
  "backend_session_libseat",
  "backend_udev",
  "renderer_gl",
  "wayland_frontend",
] }
wayland-client = { version = "0.31.13", optional = true }
wayland-protocols = { version = "0.32.13", optional = true, default-features = false }
