[package]
name = "backlit-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
backlit-common = { path = "../common" }
backlit-launcher = { path = "../launcher" }
backlit-shortcuts = { path = "../shortcuts" }
backlit-window-policy = { path = "../window-policy" }

[lib]
path = "src/lib.rs"
