[package]
name = "backlit-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
backlit-common = { path = "../common" }
backlit-compositor-backend = { path = "../compositor-backend" }
backlit-demo-client = { path = "../demo-client" }
backlit-input = { path = "../input" }
backlit-launcher = { path = "../launcher" }
backlit-shortcuts = { path = "../shortcuts" }
backlit-surface = { path = "../surface" }
backlit-window-policy = { path = "../window-policy" }
