[package]
name = "backlit-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
backlit-common = { path = "../common" }
backlit-launcher = { path = "../launcher" }
backlit-settings-daemon = { path = "../settings-daemon" }

[lib]
path = "src/lib.rs"
